load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["grpcreadclient.go"],
    importpath = "github.com/buchgr/bazel-remote/utils/grpcreadclient",
    visibility = ["//visibility:private"],
    deps = [
        "//genproto/build/bazel/remote/execution/v2:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_binary(
    name = "grpcreadclient",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
