load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["idle.go"],
    importpath = "github.com/buchgr/bazel-remote/v2/utils/idle",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["idle_test.go"],
    deps = [":go_default_library"],
)
