load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["action_result.go"],
    importpath = "github.com/buchgr/bazel-remote/utils/validate",
    visibility = ["//visibility:public"],
    deps = ["//genproto/build/bazel/remote/execution/v2:go_default_library"],
)
