load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["zstdpool.go"],
    importpath = "github.com/buchgr/bazel-remote/v2/utils/zstdpool",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_klauspost_compress//zstd:go_default_library",
        "@com_github_mostynb_zstdpool_syncpool//:go_default_library",
    ],
)
