load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["casblob.go"],
    importpath = "github.com/buchgr/bazel-remote/cache/disk/casblob",
    visibility = ["//visibility:public"],
    deps = ["@com_github_klauspost_compress//zstd:go_default_library"],
)
