load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["casblob.go"],
    importpath = "github.com/buchgr/bazel-remote/cache/disk/casblob",
    visibility = ["//visibility:public"],
    deps = [
        "//utils/zstdpool:go_default_library",
        "@com_github_klauspost_compress//zstd:go_default_library",
        "@com_github_mostynb_zstdpool_syncpool//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["casblob_test.go"],
)
